--- a/test/header3calspan.html
+++ b/test/header3calspan.html
@@ -1,7 +1,7 @@
 <table style="width:100%">
     <tr>
         <th>1</th>
-        <th colspan="3">23</th>
+        <th colspan="3" class="test" data-test="test">23</th>
     </tr>
     <tr>
         <th>1</th>
