--- a/test/body2rowspan.html
+++ b/test/body2rowspan.html
@@ -3,10 +3,10 @@
         <tr>
             <td rowspan="2">1</td>
             <td rowspan="2">2</td>
-            <td>one</td>
+            <td> one</td>
         </tr>
         <tr>
-            <td></td>
+            <td>two </td>
         </tr>
         <tr>
             <td></td>
