--- a/test/fullrowspan.html
+++ b/test/fullrowspan.html
@@ -1,10 +1,10 @@
 <table>
     <tr>
-        <td rowspan="2"></td>
-        <td rowspan="2"></td>
-        <td rowspan="2"></td>
-        <td rowspan="2"></td>
-        <td rowspan="2"></td>
+        <td rowspan="2">1</td>
+        <td rowspan="2">2</td>
+        <td rowspan="2">3</td>
+        <td rowspan="2">4</td>
+        <td rowspan="2">5</td>
     </tr>
     <tr></tr>
 </table>
